# cotire_iwyu

./: CMakeLists.txt  README.md  class1.h  main.cpp  test2.h
CMake/: iwyu.cmake
